[package]
name = "rconfigure"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dirs = "4.0.0"
far = "0.1.0"
main_error = "0.1.2"
quiz = "0.0.3"
rhai = { version = "1.1.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.8"

[features]

[[bin]]
name = "rconf"
path = "src/main.rs"
